--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,14 @@ repository: egdilna/egovedu-ucebnice
 aux_links:
   EGOVedu: https://www.egovedu.cz
 
+heading_anchors: false
+search_enabled: true
+search:
+  heading_level: 2
+  previews: 3
+  preview_words_before: 10
+  preview_words_after: 10
+  tokenizer_separator: /[\s/]+/
+  rel_url: true
+  button: false
+
