--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+lang: cs
 theme: just-the-docs
 title: Elektronické učebnice EGOVedu
 description: Veřejné elektronické učební a lektorské podklady projektu EGOVermentí EDUkace
